[project]
name = "mastering-transformers"
version = "0.1.0"
description = "Development repository for Mastering Transformers book"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyterlab>=4.5.7",
    "nltk>=3.9.4",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "torch>=2.12.0",
    "transformers>=5.9.0",
]
