[project]
name = "mastering-transformers"
version = "0.1.0"
authors = [
    { name = "Beresnev Aleksei", email = "meikuam@gmail.com" }
]
description = "Development repository for Mastering Transformers book"
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
    "datasets>=5.0.0",
    "dotenv>=0.9.9",
    "gensim>=4.4.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.7",
    "matplotlib>=3.10.9",
    "nltk>=3.9.4",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "tensorflow[and-cuda]>=2.21.0",
    "torch>=2.12.0",
    "tqdm>=4.68.3",
    "transformers>=5.9.0",
]
